--- a/extension/skypopup.html
+++ b/extension/skypopup.html
@@ -51,14 +51,14 @@
 <body>
   <h2>MSFS2020 Moving Map</h2>
   
-  <label>Puerto del Servidor:</label>
+  <label>Server Port:</label>
   <input type="number" id="portNumber" value="8001" min="1000" max="65535">
   
-  <button id="saveBtn">Guardar Configuración</button>
-  <button id="toggleBtn">Activar Tracking</button>
+  <button id="saveBtn">Save Settings</button>
+  <button id="toggleBtn">Enable Tracking</button>
   <!-- <button id="exitBtn" style="background-color: #dc3545; margin-top: 10px;">Apagar Servidor</button> -->
   
-  <div id="status" class="disconnected">Desconectado</div>
+  <div id="status" class="disconnected">Disconnected</div>
 </body>
 <script src="popup.js"></script>
 </html>
